fix: fixed collapse of the progress bar

--- a/src/scss/components/_player.scss
+++ b/src/scss/components/_player.scss
@@ -2,6 +2,7 @@
 
 .player {
   position: relative;
+  min-width: 320px;
   width: 667px;
   height: 375px;
   background-color: $black;
